--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install and build
-        working-directory: ./hotelsys-demo
-        run: npm install && npm run build && cp dist/hotelsys/index.html dist/hotelsys/404.html
+        working-directory: hotelsys-demo
+        run: npm install && npm run build:ci && cp dist/hotelsys/index.html dist/hotelsys/404.html
       
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
