--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:ci": "ng build --prod --base-href /hotelsys-demo/",
+    "build:ci": "ng build --base-href /hotelsys-demo/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
