--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,4 +24,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: hotelsys-demo/dist/hotelsys # The folder the action should deploy.        
+          folder: dist/hotelsys # The folder the action should deploy.        
