--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install and build
+        working-directory: ./hotelsys
         run: npm install && npm run build:ci && cp dist/hotelsys/index.html dist/hotelsys/404.html
       
       - name: Deploy
