--- a/hotelsys/package.json
+++ b/hotelsys/package.json
@@ -10,7 +10,7 @@
     "test": "ng test --watch=true --source-map=false",
     "coverage": "ng test --code-coverage",
     "lint": "ng lint",
-    "server": "json-server --watch db.json --port 5000",
+    "server": "json-server --watch reservation.json --port 5000",
     "e2e": "ng e2e"
   },
   "private": true,
