--- a/json-server/Dockerfile
+++ b/json-server/Dockerfile
@@ -8,8 +8,8 @@ ENV WORK_DIR ${WORK_DIR}
 RUN mkdir ${WORK_DIR}
 WORKDIR ${WORK_DIR}
 
-COPY reservation.json ${WORK_DIR}/reservation.json
+COPY db.json ${WORK_DIR}/db.json
 
 EXPOSE 5000
 
-CMD json-server -H 0.0.0.0 --port 5000 --watch ${WORK_DIR}/reservation.json
+CMD json-server -H 0.0.0.0 --port 5000 --watch ${WORK_DIR}/db.json
